# orangit-billing

./: CHANGELOG.md  CODEOWNERS  GitVersion.yml  LICENSE  README.md
.cursor/rules/rules/: 001-use-uv.mdc  002-oop.mdc  004-logging.mdc  008_git.mdc  009_versioniong.mdc  010_security.mdc  011_quality.mdc
billable-invoicing/: .gitignore  README.md  billable.sh  current_invoicing.sh  current_util.sh  hours_invoicing.sh  last_month.sh  missing_from_rates.txt  pyproject.toml
billable-invoicing/.cursor/rules/rules/: 003-documents.mdc  005-linting.mdc  006-testing.mdc  007-package.mdc  100_cli.mdc
billable-invoicing/billable_invoicing/: __init__.py  __main__.py  agileday.py  cli.py  main.py  pyproject.toml  transformer.py  utilization_transformer.py  workday_transformer.py
fixed_fee_invoicing/: README.md  fixed_fee.sh  pyproject.toml
fixed_fee_invoicing/.cursor/rules/rules/: 007-package.mdc
fixed_fee_invoicing/fixed-fee-invoicing/: __main__.py  fixed_fee.sh
fixed_fee_invoicing/fixed_fee_invoicing/: __main__.py
rules/: 007-uv
