[project]
name = "fixed-fee-invoicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sami Bister (OrangIT)", email = "sami.bister@orangit.fi" } 
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fixed-fee-invoicing = "fixed_fee_invoicing.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixed_fee_invoicing"]
